# openapi/v1.json
@@ -6426,6 +6426,7 @@
       "ResourceResponse": {
         "required": [
           "amount",
+          "isUnlocked",
           "resourceType"
         ],
         "type": "object",
@@ -6436,6 +6437,9 @@
           "amount": {
             "type": "integer",
             "format": "int32"
+          },
+          "isUnlocked": {
+            "type": "boolean"
           }
         },
         "additionalProperties": false
