# src/EmpireIdle.API/Controllers/VillageController.cs
@@ -33,7 +33,7 @@ namespace EmpireIdle.API.Controllers
                 village.Buildings.Select(b => new BuildingResponse(
                     b.Id, b.Type, b.Level, b.LastCollectedAt, b.StoredAmount, b.StorageCap,
                     b.ConstructionCompletesAt, b.IsUnderConstruction, b.SpeedUpCostGems, b.IsUnlocked)).ToList(),
-                village.Resources.Select(r => new ResourceResponse(r.ResourceType, r.Amount)).ToList());
+                village.Resources.Select(r => new ResourceResponse(r.ResourceType, r.Amount, r.IsUnlocked)).ToList());
 
             return Ok(response);
         }
